# project-polaris

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  polaris-milestones-v3.md
apps/: CMakeLists.txt
apps/feed/: CMakeLists.txt  main.cpp
apps/hello/: CMakeLists.txt  main.cpp
apps/md_gen/: CMakeLists.txt  main.cpp
apps/oms/: CMakeLists.txt  main.cpp
apps/strat/: CMakeLists.txt  main.cpp
